syntax = "proto3";

import "google/protobuf/wrappers.proto";

option go_package = "./;pb";
package collector;

service Collector {
    rpc Sync(google.protobuf.StringValue) returns (SyncInfo){}
    rpc GetMetadata(google.protobuf.StringValue) returns (stream Metadata){}
}

message SyncInfo {
    int64 total = 1;
    int64 ignore = 2;
}

message Metadata {
    string source = 1;
    string code = 2;
    string name = 3;
    double open = 4;
    double yesterday_closed = 5;
    double latest = 6;
    double high = 7;
    double low = 8;
    uint64 volume = 9;
    double account = 10;
    string date = 11;
    string time = 12;
    string suspend = 13;
}